// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Carousel /> should render with default props 1`] = `
<div
  className="mfui-carousel mfui-carousel_nav-theme_light"
  onClick={[Function]}
>
  <Swiper
    allowTouchMove={true}
    autoplay={false}
    breakpoints={
      Object {
        "1280": Object {
          "slidesPerView": 4,
          "spaceBetween": 20,
        },
        "320": Object {
          "slidesPerView": 1,
          "spaceBetween": 16,
        },
        "768": Object {
          "slidesPerView": 3,
          "spaceBetween": 20,
        },
      }
    }
    centeredSlides={false}
    className="mfui-carousel__swiper mfui-carousel__swiper_default-inner-indents"
    effect="slide"
    initialSlide={0}
    loop={false}
    noSwipingSelector=".swiper-pagination"
    onFromEdge={[Function]}
    onReachBeginning={[Function]}
    onReachEnd={[Function]}
    onResize={[Function]}
    onSlideChange={[Function]}
    onSwiper={[Function]}
    onTouchEnd={[Function]}
    pagination={
      Object {
        "clickable": true,
      }
    }
    speed={300}
    watchOverflow={true}
    watchSlidesVisibility={true}
  >
    <SwiperSlide
      className="mfui-carousel__slide"
      key="0/.0"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
    >
      <DemoSlide>
        1
      </DemoSlide>
    </SwiperSlide>
    <SwiperSlide
      className="mfui-carousel__slide"
      key="1/.1"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
    >
      <DemoSlide>
        2
      </DemoSlide>
    </SwiperSlide>
  </Swiper>
  <NavArrow
    className="mfui-carousel__arrow mfui-carousel__arrow_prev"
    disabled={true}
    onClick={[Function]}
    theme="purple"
  />
  <NavArrow
    className="mfui-carousel__arrow mfui-carousel__arrow_next"
    disabled={false}
    onClick={[Function]}
    theme="purple"
    view="next"
  />
</div>
`;

exports[`<Carousel /> should render with props 1`] = `
<div
  className="mfui-carousel mfui-carousel_nav-theme_green className rootClass"
  data-test-attr="dataValue"
  onClick={[Function]}
>
  <Swiper
    allowTouchMove={false}
    autoplay={
      Object {
        "delay": 1000,
        "disableOnInteraction": false,
        "stopOnLastSlide": true,
        "waitForTransition": false,
      }
    }
    breakpoints={
      Object {
        "768": Object {
          "slidesPerView": "auto",
          "spaceBetween": 2,
        },
      }
    }
    centeredSlides={true}
    className="mfui-carousel__swiper innerIndentsClass container"
    containerModifierClass="containerModifier"
    effect="fade"
    fadeEffect={
      Object {
        "crossFade": true,
      }
    }
    initialSlide={0}
    loop={true}
    noSwipingSelector=".swiper-pagination, button"
    onFromEdge={[Function]}
    onReachBeginning={[Function]}
    onReachEnd={[Function]}
    onResize={[Function]}
    onSlideChange={[Function]}
    onSwiper={[Function]}
    onTouchEnd={[Function]}
    pagination={
      Object {
        "clickable": true,
        "el": ".some-el",
      }
    }
    speed={1000}
    watchOverflow={true}
    watchSlidesVisibility={true}
  >
    <SwiperSlide
      className="mfui-carousel__slide slide"
      key="0/.0"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
    >
      <DemoSlide>
        1
      </DemoSlide>
    </SwiperSlide>
    <SwiperSlide
      className="mfui-carousel__slide slide"
      key="1/.1"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
    >
      <DemoSlide>
        2
      </DemoSlide>
    </SwiperSlide>
  </Swiper>
  <NavArrow
    className="mfui-carousel__arrow mfui-carousel__arrow_prev prev"
    disabled={false}
    onClick={[Function]}
    theme="purple"
  />
  <NavArrow
    className="mfui-carousel__arrow mfui-carousel__arrow_next next"
    disabled={false}
    onClick={[Function]}
    theme="purple"
    view="next"
  />
</div>
`;
